js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.8.kt
fun getString(): String {
    konst s: suspend (Int, Int, Int, Int, Int, Int, Int, Int) -> Unit = { _, _, _, _, _, _, _, _ -> }
    return getTypeName(s)
}
